--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: Programming Journey
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gorilladunk.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 repository: https://github.com/GorillaDunk/GorillaDunk.github.io.git # for github-metadata
-
+future: true
 permalink: pretty
 
 exclude:
