--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 title: DongHyeon's Blog
 description: Programming Journey
-baseurl: "" # the subpath of your site, e.g. /blog
+ # the subpath of your site, e.g. /blog  /baseurl: ""
 url: "https://gorilladunk.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 repository: https://github.com/GorillaDunk/GorillaDunk.github.io.git # for github-metadata
 future: true
-permalink: pretty
+permalink: prettyF
 
 exclude:
  # from https://github.com/jekyll/jekyll/blob/master/lib/site_template/_config.yml:
